--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scorm-promised",
   "version": "1.1.1",
-  "description": "",
+  "description": "SCORM 1.2 API Wrapper",
   "main": "dist/scorm.mjs",
   "directories": {
     "lib": "lib"
