--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
   },
   "scripts": {
     "build:watch": "rollup -c rollup.config.js --watch",
-    "build:prod": "rollup -c rollup.config.js"
+    "build:prod": "rollup -c rollup.config.js",
+    "clean": "rimraf dist",
+    "precommit": "npm run clean && npm run build:prod && git add -A"
   },
+  "pre-commit": [
+    "precommit"
+  ],
   "homepage": "https://github.com/SamuelHornsey/scorm-promised/blob/master/README.md",
   "author": "Samuel Hornsey (SH)",
   "license": "MIT",
@@ -19,6 +24,8 @@
   },
   "devDependencies": {
     "http-server": "^0.11.1",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^3.0.0",
     "rollup": "^1.5.0",
     "rollup-plugin-typescript": "^1.0.0",
     "tslib": "^1.9.3",
